config-root/namespaces/jx-staging/pyhton-test/pyhton-test-pyhton-test-deploy.yaml
# Source: pyhton-test/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyhton-test-pyhton-test
  labels:
    draft: draft-app
    chart: "pyhton-test-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'pyhton-test'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: pyhton-test-pyhton-test
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: pyhton-test-pyhton-test
    spec:
      serviceAccountName: pyhton-test-pyhton-test
      containers:
        - name: pyhton-test
          image: "10.108.47.66/sezzz/pyhton-test:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
